@@ -111,6 +111,8 @@ public:
     void DrawPieChartPlot(const std::string &opt="", int nCols=0,int nRows=0);
     void DrawPieChartPlot(const std::string &opt, int nCols,int nRows, std::vector < Region* > &regions);
     
+    void CreateCustomAsimov();
+    
     // turn to RooStat::HistFactory
     void ToRooStat(bool createWorkspace=true, bool exportOnly=true);
     
@@ -265,6 +267,8 @@ public:
     
     bool fKeepPrefitBlindedBins;
     TH1F* fBlindedBins;
+    
+    bool fCustomAsimov;
 };
 
 #endif
